--- a/Assignment 5.html
+++ b/Assignment 5.html
@@ -1,3 +1,12 @@
+<!--
+	Name: Luke Saldanha
+  Student Number: 100911001
+	File: INFT 1206 Assignment 5
+	Date: j, 2024
+  Description: Troubleshoot the following website so that it includes web accessibility.
+	-->
+
+    
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -75,11 +84,11 @@
         <p>
           Wild bears eat a variety of meat, fish, fruit, nuts, and other naturally growing ingredients. In general, they will hunt for food themselves in woodland or rivers, but at a push they will track down their sustenance from farms or country houses. They tend to live in relative isolation, in caves, tents, or cottages.
         </p>
-        <img src="images/wild-bear.jpg" alt="A wild bear in its natural habitat">
+        <img src="wild-bear.jpg" alt="A wild bear in its natural habitat">
         <p>
           Urban (gentrified) bears on the other hand have largely abandoned the old ways. They will hunt other urban creatures if necessary (including other predators like rats and foxes), but prefer to scavenge from readily available urban food outlets like dumpsters, bins, and fast food joints. When food has proven scarce, urban bears have even been known to break into people's kitchens and steal essentials like baked beans, ready meals, and microwave ovens.
         </p>
-        <img src="images/urban-bear.jpg" alt="An urban bear near a fast food joint">
+        <img src="urban-bear.jpg" alt="An urban bear near a fast food joint">
         <p>Urban bears will sleep anywhere they can, from bus shelters and parks, to the toilets in McDonald's, to their own apartment.</p>
 
         <h3>Mating Rituals</h3>
@@ -87,9 +96,9 @@
           Bears are romantic creatures by nature, and will naturally look for a mate that they can spend the rest of their lives with. They will woo a potential suitor by making their dwelling look attractive — for example with cave paintings or a bed of reeds in the case of a wild bear, and mood lighting and a Michael Bublé CD in the case of an urban bear. The following audio clip contains a fact file providing more details about bear mating rituals, along with samples and quotes from experts.
         </p>
         <audio controls>
-          <source src="audio/bear.mp3" type="audio/mp3">
-          <source src="audio/bear.ogg" type="audio/ogg">
-          <track src="transcripts/bear.vtt" kind="subtitles" srclang="en" label="English">
+          <source src="bear.mp3" type="audio/mp3">
+          <source src="bear.ogg" type="audio/ogg">
+          <track src="transcript.vtt" kind="subtitles" srclang="en" label="English">
           <p>It looks like your browser doesn't support HTML5 audio players.</p>
         </audio>
       </article>
